--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,10 @@
     <color name="grey">#EEE7E5</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="turquoise">#ADD8E6</color>
+
+    <color name="background">#A569BD</color>
+    <color name="back_main">#FCDFFF</color>
+
 
 </resources>
