--- a/app/src/main/res/layout/ad_items.xml
+++ b/app/src/main/res/layout/ad_items.xml
@@ -2,30 +2,89 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:background="@color/cardview_light_background">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="10dp">
 
-    <LinearLayout
-        android:id="@+id/ll_carDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
+   <androidx.cardview.widget.CardView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:cardElevation="3dp"
+       >
 
-        <ImageView
-            android:id="@+id/iv_carImg"
-            android:layout_width="100dp"
-            android:layout_height="100dp" />
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_carName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="--"
-            android:textSize="20sp" />
+       <LinearLayout
+           android:id="@+id/ll_carDetails"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           android:background="@android:drawable/editbox_background_normal"
+           android:padding="10dp">
 
-    </LinearLayout>
+           <ImageView
+               android:id="@+id/iv_carImg"
+               android:layout_width="100dp"
+               android:layout_height="100dp" />
+
+          <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="100dp"
+              android:orientation="vertical">
+
+              <TextView
+                  android:id="@+id/tv_carName"
+                  android:layout_width="match_parent"
+                  android:layout_height="0dp"
+                  android:layout_weight="1"
+                  android:layout_gravity="center"
+                  android:gravity="center"
+                  android:text="--"
+                  android:textColor="@color/black"
+                  android:textSize="15sp" />
+
+              <TextView
+                  android:id="@+id/tv_carPrice"
+                  android:layout_width="match_parent"
+                  android:layout_height="0dp"
+                  android:layout_weight="1"
+                  android:layout_gravity="center"
+                  android:gravity="center"
+                  android:text="--"
+                  android:textColor="@color/black"
+                  android:textSize="15sp" />
+
+              <TextView
+                  android:id="@+id/tv_carYear"
+                  android:layout_width="match_parent"
+                  android:layout_height="0dp"
+                  android:layout_weight="1"
+                  android:layout_gravity="center"
+                  android:gravity="center"
+                  android:text="--"
+                  android:textColor="@color/black"
+                  android:textSize="15sp" />
+
+
+          </LinearLayout>
+
+       </LinearLayout>
+
+           <Button
+               android:id="@+id/btn_edit"
+               android:layout_width="match_parent"
+               android:layout_height="30dp"
+               android:layout_margin="5dp"
+               android:text="Edit Your Ad"
+               android:gravity="center"
+               android:textColor="@color/black"
+               android:textSize="15dp"
+               android:background="@color/background"
+               android:visibility="gone"/>
+
+       </LinearLayout>
+   </androidx.cardview.widget.CardView>
 
 </LinearLayout>
