--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -10,7 +10,7 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_cars"
         android:layout_width="match_parent"
-        android:layout_height="250dp">
+        android:layout_height="150dp">
 
 
     </androidx.viewpager.widget.ViewPager>
@@ -72,6 +72,7 @@
 
         <EditText
             android:id="@+id/et_price"
+            android:inputType="number"
             android:layout_width="0dp"
             android:layout_weight="0.6"
             android:layout_height="wrap_content"
@@ -104,6 +105,7 @@
 
         <EditText
             android:id="@+id/et_year"
+            android:inputType="number"
             android:layout_width="0dp"
             android:layout_weight="0.6"
             android:layout_height="wrap_content"
@@ -152,7 +154,8 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    android:gravity="bottom">
 
     <Button
         android:id="@+id/btn_image"
