--- a/app/src/main/res/layout/ad_items.xml
+++ b/app/src/main/res/layout/ad_items.xml
@@ -14,14 +14,15 @@
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
-           android:orientation="vertical">
+           android:orientation="vertical"
+           android:background="@android:drawable/editbox_background_normal"
+           >
 
        <LinearLayout
            android:id="@+id/ll_carDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
-           android:background="@android:drawable/editbox_background_normal"
            android:padding="10dp">
 
            <ImageView
